--- a/django-nodejs-backend/static/src/js/package.json
+++ b/django-nodejs-backend/static/src/js/package.json
@@ -10,10 +10,12 @@
   "author": "blacktyg3r",
   "license": "ISC",
   "dependencies": {
+    "@types/yargs": "^17.0.10",
     "@vite/vitejs": "^2.3.17",
     "@vite/vitejs-http": "^2.3.17",
     "@vite/vitejs-ws": "^2.3.17",
     "body-parser": "^1.19.2",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "yargs": "^17.5.1"
   }
 }
