--- a/.gitignore
+++ b/.gitignore
@@ -4,24 +4,25 @@
 *.pickle
 .idea/
 .gitignore
+/.pytest_cache/
 
+/django-backend/package-lock.json
+/django-backend/node_modules/
+/django-backend/static/src/js/node_modules/
+/django-backend/static/src/js/package-lock.json
+/django-backend/static/src/js/test_send.js
+/django-backend/static/src/js/vite-api-server.js
+/django-backend/static/src/js/send.js
+/django-backend/static/src/js/notepad.js
 
-/django-nodejs-backend/package-lock.json
-/django-nodejs-backend/node_modules/
-/django-nodejs-backend/static/src/js/node_modules/
-/django-nodejs-backend/static/src/js/package-lock.json
-/django-nodejs-backend/static/src/js/test_send.js
-/django-nodejs-backend/static/src/js/vite-api-server.js
-/django-nodejs-backend/static/src/js/send.js
-/django-nodejs-backend/static/src/js/notepad.js
-
-/django-nodejs-backend/core/secrets.py
-/django-nodejs-backend/core/__pycache__/
-/django-nodejs-backend/tipbot/migrations/
-/django-nodejs-backend/tipbot/__pycache__/
-/django-nodejs-backend/vtm/migrations/
-/django-nodejs-backend/vtm/__pycache__/
-/django-nodejs-backend/db.sqlite3
+/django-backend/core/secrets.py
+/django-backend/core/__pycache__/
+/django-backend/tipbot/migrations/
+/django-backend/tipbot/__pycache__/
+/django-backend/vtm/migrations/
+/django-backend/vtm/tests.py
+/django-backend/vtm/__pycache__/
+/django-backend/db.sqlite3
 
 /telegram-bot/main.log
 /telegram-bot/test.log
@@ -30,7 +31,10 @@
 /telegram-bot/src/__pycache__/
 /telegram-bot/src/wallet/__pycache__/
 /telegram-bot/tipbot_storage.pickle
-
-
 /telegram-bot/src/keys.py
 /telegram-bot/src/inline_beta.py
+/telegram-bot/tests/
+
+/vite-nodejs/node_modules/
+/vite-nodejs/tests/
+/vite-nodejs/package-lock.json
