--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ __pycache__/
 /.idea/
 /telegram-bot/tipbot_storage.pickle
 /telegram-bot/simple.db
+/telegram-bot/tests/
+/telegram_bot/main.log
+/telegram_bot/tests/
+/telegram_bot/simple.db
+/telegram_bot/tipbot_storage.pickle
+/telegram_bot/src/keys.py
