add epic-py submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "django_backend/django_backend/vite_adapter"]
 	path = django_backend/django_backend/vite_adapter
 	url = https://github.com/blacktyger/vite_adapter
+
+[submodule "telegram_bot/src/wallets/epic"]
+	path = telegram_bot/src/wallets/epic
+	url = https://github.com/blacktyger/epic-py
+	branch = tipbot
