--- a/requirements.txt
+++ b/requirements.txt
@@ -51,3 +51,17 @@ tzlocal==5.0.1
 urllib3==2.0.3
 wcwidth==0.2.6
 yarl==1.9.2
+
+pip~=23.1.2
+PyYAML~=6.0
+Naked~=0.1.32
+crypto~=1.4.1
+shellescape~=3.8.1
+psutil~=5.9.5
+setuptools~=65.5.0
+tomlkit~=0.11.8
+mnemonic~=0.20
+asn1crypto~=1.5.1
+coincurve~=18.0.0
+pyperclip~=1.8.2
+killport~=1.2.0
